Dynamic Frame Height
Added code to make the iframe change height dynamically.

--- a/index.html
+++ b/index.html
@@ -7,9 +7,14 @@
 </head>
 <body>
   <div id="widget-container" style="position: relative; width: 100%;">
-    <input type="text" id="autocomplete-input" placeholder="Start typing..." aria-autocomplete="list" aria-haspopup="listbox">
+    <input
+      type="text"
+      id="autocomplete-input"
+      placeholder="Start typing..."
+      aria-autocomplete="list"
+      aria-haspopup="listbox"
+    >
     <ul id="suggestions-list" role="listbox"></ul>
-    <div id="loading-indicator">Loading...</div>
   </div>
 
   <!-- External Libraries -->
