--- a/index.html
+++ b/index.html
@@ -11,10 +11,8 @@
     <input
       type="text"
       id="autocomplete-input"
-      aria-autocomplete="list"
-      aria-haspopup="listbox"
     >
-    <ul id="suggestions-list" role="listbox"></ul>
+    <ul id="suggestions-list"></ul>
   </div>
 
   <!-- External Libraries -->
