--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
     <input
       type="text"
       id="autocomplete-input"
+      aria-autocomplete="list"
+      aria-haspopup="listbox"
     >
-    <ul id="suggestions-list"></ul>
+    <ul id="suggestions-list" role="listbox"></ul>
   </div>
 
   <!-- External Libraries -->
